# Betteruptime

./: .env  Cargo.toml
api/: Cargo.toml
api/src/: auth_middleware.rs  main.rs  request_input.rs  request_output.rs
api/src/routes/: user.rs  website.rs
db/: Cargo.toml  diesel.toml
db/migrations/2025-07-05-070416_creating_user_website/: up.sql
db/migrations/2025-08-17-061738_added_user_update_website/: up.sql
db/src/: config.rs  db.rs  lib.rs  schema.rs
db/src/models/: user.rs  website.rs
frontend/: package.json
frontend/app/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/signin/: page.tsx
frontend/app/signup/: page.tsx
frontend/lib/: utils.ts
pusher/: Cargo.toml
pusher/src/: main.rs
redisstream/: Cargo.toml
redisstream/src/: lib.rs
worker/: Cargo.toml
worker/src/: main.rs
