[package]
name = "pusher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.0", features = ["postgres"] }
diesel_async = { version = "2.0", features = ["postgres"] }
redisstream = { path = "../redisstream" }   # local crate
serde = { version = "1.0", features = ["derive"] }
