[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.0", features = ["postgres"] }
diesel_async = { version = "2.0", features = ["postgres"] }
reqwest = { version = "0.11", features = ["json", "gzip", "stream", "tls"] }
futures = "0.3"
redisstream = { path = "../redisstream" }
tracing = "0.1"
